# nonebot_plugin_lolmatch

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 54eff20f9cc8_init_db.py
nonebot_plugin_lolmatch/: __init__.py  data_source.py  model.py  short.css
src/nonebot_plugin_lolmatch/: __init__.py  config.py  data_source.py  model.py  template.py
