[tool.poetry]
name = "nonebot_plugin_lolmatch"
version = "0.3.0.2"
description = ""
authors = ["Alex Newton <sharenfan222@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Diaosi1111/nonebot_plugin_lolmatch"
repository = "https://github.com/Diaosi1111/nonebot_plugin_lolmatch"
keywords = ["nonebot", "nonebot2", "LoL"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3"
ujson = "^5"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2"
nonebot_plugin_apscheduler = "^0.2"
nonebot_plugin_htmlrender = "^0.2"
nonebot_plugin_tortoise_orm = "^0.0.1a3"
pillow = "^9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2"
nonebot_plugin_apscheduler = "^0.2.0"
nonebot_plugin_htmlrender = "*"
nonebot_plugin_tortoise_orm = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
