[metadata]
name = nonebot_plugin_lolmatch
version = 0.0.2
author = Alex Newton
author_email = sharenfan222@gmail.com
description = a LoL match plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Diaosi1111/nonebot_plugin_lolmatch
project_urls =
    Bug Tracker = https://github.com/Diaosi1111/nonebot_plugin_lolmatch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8,<3.11

[options.packages.find]
where = src